manifests/atlantis-server.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: atlantis
  namespace: default
spec:
  serviceName: atlantis
  replicas: 1
  selector:
    matchLabels:
      app: atlantis
  template:
    metadata:
      labels:
        app: atlantis
    spec:
      hostNetwork: true                   # используем сеть хоста
      dnsPolicy: ClusterFirstWithHostNet  # корректная резолвинг DNS
      securityContext:
        fsGroup: 1000
      containers:
      - name: atlantis
        image: ghcr.io/runatlantis/atlantis:v0.23.2
        ports:
        - containerPort: 4141
          name: atlantis
        volumeMounts:
        - name: atlantis-data
          mountPath: /atlantis-data
        livenessProbe:
          httpGet:
            path: /healthz
            port: 4141
          periodSeconds: 60
        readinessProbe:
          httpGet:
            path: /healthz
            port: 4141
          periodSeconds: 60
      volumes:
      - name: atlantis-data
        persistentVolumeClaim:
          claimName: atlantis-data
---
apiVersion: v1
kind: Service
metadata:
  name: atlantis
  namespace: default
spec:
  type: NodePort
  selector:
    app: atlantis
  ports:
    - name: atlantis
      port: 4141
      targetPort: 4141
      nodePort: 31426
