manifests/grafana-ingress.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: grafana-srv
  namespace: monitoring
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: grafana
  ports:
    - port: 80          # порт для Ingress
      targetPort: 3000  # порт внутри пода Grafana

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  namespace: monitoring
spec:
  ingressClassName: nginx
  rules:
    - host: ""
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grafana-srv
                port:
                  number: 80
