manifests/grafana.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: grafana-srv
  namespace: monitoring
  labels:
    app.kubernetes.io/component: grafana
    app.kubernetes.io/name: grafana
    app.kubernetes.io/part-of: kube-prometheus
    app.kubernetes.io/version: 9.4.3
spec:
  type: NodePort
  selector:
    app.kubernetes.io/component: grafana
    app.kubernetes.io/name: grafana
    app.kubernetes.io/part-of: kube-prometheus
  ports:
    - name: http
      protocol: TCP
      nodePort: 30080      # Port to apply from outside (to see ips - 'kubectl get nodes -o wide').
      port: 3000           # Port to apply from inside (to see ips - 'kubectl get svc').
      targetPort: http     # Port to map access to (to see ips - 'kubectl get pods -o wide')

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app.kubernetes.io/component: grafana
    app.kubernetes.io/name: grafana
    app.kubernetes.io/part-of: kube-prometheus
    app.kubernetes.io/version: 9.4.3
  name: grafana
  namespace: monitoring
spec:
  egress:
  - {}
  ingress:
  - {} 
  podSelector:
    matchLabels:
      app.kubernetes.io/component: grafana
      app.kubernetes.io/name: grafana
      app.kubernetes.io/part-of: kube-prometheus
  policyTypes:
  - Egress
  - Ingress
